--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html ng-app="myApp">
 	<head>
 		<title>Pig Latin Translator</title>
+		<link rel="stylesheet" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" src="styles/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 	</head>
 	<body ng-controller="myCtrl">
