--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html ng-app="myApp">
 	<head>
 		<title>Pig Latin Translator</title>
-		<link rel="stylesheet" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<link rel="stylesheet" src="styles/style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="styles/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 	</head>
 	<body ng-controller="myCtrl">
-		<textarea ng-model="toTranslate" style="min-height: 300px; min-width: 500px" placeholder="Enter a sentence or phrase to be translated (Do NOT include punctuation as this will disrupt the translation)."></textarea>
-		<textarea ng-model="translated" style="min-height: 300px; min-width: 500px"></textarea>
-		<br>
-		<button ng-click="translate()">Translate</button>
+		<textarea class="input-large col-md-4" ng-model="toTranslate" placeholder="Enter a sentence or phrase to be translated"></textarea>
+		<textarea class="input-large col-md-4" ng-model="translated"></textarea>
+		<button type="submit" class="btn btn-success" ng-click="translate()">Translate</button>
+
 		<script src="scripts/angular.js"></script>
 	</body>
 </html>
