--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 	</head>
 	<body ng-controller="myCtrl">
-		<textarea class="input-large col-md-4" ng-model="toTranslate" placeholder="Enter a sentence or phrase to be translated"></textarea>
-		<textarea class="input-large col-md-4" ng-model="translated"></textarea>
-		<button type="submit" class="btn btn-success" ng-click="translate()">Translate</button>
-
+		<div class="row">
+			<textarea class="input-large col-md-4" ng-model="toTranslate" placeholder="Enter a sentence or phrase to be translated"></textarea>
+			<textarea class="input-large col-md-4" ng-model="translated"></textarea>
+		</div>
+		<div class="row">
+			<button type="submit" class="btn btn-success" ng-click="translate()">Translate</button>
+		</div>
 		<script src="scripts/angular.js"></script>
 	</body>
-</html>
+	</html>
